@@ -32,17 +32,3 @@
 [type: gettext/ini] 48x48/emblems/emblem-urgent.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-web.icon.in
 [type: gettext/ini] index.theme.in
-scalable/emblems/emblem-OK.icon.in.h
-scalable/emblems/emblem-certified.icon.in.h
-scalable/emblems/emblem-cool.icon.in.h
-scalable/emblems/emblem-danger.icon.in.h
-scalable/emblems/emblem-distinguished.icon.in.h
-scalable/emblems/emblem-draft.icon.in.h
-scalable/emblems/emblem-favorite.icon.in.h
-scalable/emblems/emblem-generic.icon.in.h
-scalable/emblems/emblem-important.icon.in.h
-scalable/emblems/emblem-new.icon.in.h
-scalable/emblems/emblem-ohno.icon.in.h
-scalable/emblems/emblem-personal.icon.in.h
-scalable/emblems/emblem-special.icon.in.h
-scalable/emblems/emblem-urgent.icon.in.h
