@@ -1,3 +1,7 @@
+2004-02-15  Danilo Šegan  <dsegan@gmx.net>
+
+	* POTFILES.in: Removed "missing" files (*.in.h).
+
 2004-02-14  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
